[gd_scene load_steps=10 format=3 uid="uid://ebt3esk7gclh"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_4qolv"]
[ext_resource type="PackedScene" uid="uid://bkjncy4ae46ty" path="res://scenes/players_panel.tscn" id="1_usx5d"]
[ext_resource type="PackedScene" uid="uid://cbp6ir3ijuft5" path="res://scenes/sessions_panel.tscn" id="2_kcwdb"]
[ext_resource type="PackedScene" uid="uid://do2syaxh5w7dp" path="res://scenes/editor_panel.tscn" id="4_nj8go"]
[ext_resource type="PackedScene" uid="uid://dyna0h7wa5ryw" path="res://scenes/stats_panel.tscn" id="5_ilvmv"]
[ext_resource type="PackedScene" uid="uid://b80fpoy377dm0" path="res://scenes/properties_panel.tscn" id="6_227dw"]
[ext_resource type="Texture2D" uid="uid://dd0ve1mefdrdc" path="res://assets/icons/app_icons/app_icon_64px.svg" id="7_vnrqp"]
[ext_resource type="FontVariation" uid="uid://bt4v0q31h0w7t" path="res://resources/fonts/default_bold.tres" id="8_yq2gl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q058f"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.258824, 0.258824, 0.258824, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 5

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4qolv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="MenuBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
flat = true

[node name="File" type="PopupMenu" parent="VBoxContainer/MenuBar"]
transparent_bg = true
size = Vector2i(168, 128)
item_count = 5
item_0/text = "Import"
item_0/id = 0
item_1/text = "Export"
item_1/id = 1
item_2/text = "Open Data Directory"
item_2/id = 2
item_3/text = ""
item_3/id = 3
item_3/separator = true
item_4/text = "Quit"
item_4/id = 4

[node name="Help" type="PopupMenu" parent="VBoxContainer/MenuBar"]
transparent_bg = true
item_count = 1
item_0/text = "About"
item_0/id = 0

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 1000

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
split_offset = 240

[node name="LeftTabContainer" type="TabContainer" parent="VBoxContainer/HSplitContainer/HSplitContainer"]
clip_contents = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="Players" parent="VBoxContainer/HSplitContainer/HSplitContainer/LeftTabContainer" instance=ExtResource("1_usx5d")]
layout_mode = 2

[node name="CenterTabContainer" type="TabContainer" parent="VBoxContainer/HSplitContainer/HSplitContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2

[node name="Sessions" parent="VBoxContainer/HSplitContainer/HSplitContainer/CenterTabContainer" instance=ExtResource("2_kcwdb")]
layout_mode = 2

[node name="Editor" parent="VBoxContainer/HSplitContainer/HSplitContainer/CenterTabContainer" instance=ExtResource("4_nj8go")]
visible = false
layout_mode = 2

[node name="Stats" parent="VBoxContainer/HSplitContainer/HSplitContainer/CenterTabContainer" instance=ExtResource("5_ilvmv")]
visible = false
layout_mode = 2

[node name="RightTabContainer" type="TabContainer" parent="VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="Properties" parent="VBoxContainer/HSplitContainer/RightTabContainer" instance=ExtResource("6_227dw")]
layout_mode = 2

[node name="AboutPopup" type="Popup" parent="."]
transparent_bg = true
initial_position = 2
size = Vector2i(287, 139)

[node name="Panel" type="PanelContainer" parent="AboutPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q058f")

[node name="HBoxContainer" type="HBoxContainer" parent="AboutPopup/Panel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="AboutPopup/Panel/HBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
texture = ExtResource("7_vnrqp")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="AboutPopup/Panel/HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="AboutPopup/Panel/HBoxContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.8)
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("8_yq2gl")
theme_override_font_sizes/font_size = 24
text = "Scorekeeper"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="AboutPopup/Panel/HBoxContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.6)
layout_mode = 2
size_flags_vertical = 3

[node name="VersionLabel" type="Label" parent="AboutPopup/Panel/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "1.0.0 Beta"

[node name="DateLabel" type="Label" parent="AboutPopup/Panel/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Date: 2023-10-20"

[node name="BranchLabel" type="Label" parent="AboutPopup/Panel/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Branch: Master"

[node name="ExportFileDialog" type="FileDialog" parent="."]
title = "Export"
initial_position = 2
size = Vector2i(879, 480)
ok_button_text = "Export"
access = 2
filters = PackedStringArray("*.zip")

[node name="ImportFileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(771, 480)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.zip")
